<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="30dp"
        tools:ignore="UselessParent">


        <Button
            android:id="@+id/orders_button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/button_bg"
            android:elevation="7dp"
            android:fontFamily="@font/reem_kufi"
            android:gravity="center"
            android:onClick="goOrders"
            android:orientation="vertical"
            android:padding="10dp"
            android:shadowColor="#7B6B64"
            android:text="@string/orders"
            app:backgroundTint="#AA9D95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="OnClick" />


        <Button
            android:id="@+id/profile_button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:elevation="7dp"
            android:fontFamily="@font/reem_kufi"
            android:gravity="center"
            android:onClick="goProfile"
            android:orientation="vertical"
            android:padding="10dp"
            android:shadowColor="#7B6B64"
            android:text="@string/profile"
            app:backgroundTint="#AA9D95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/favorites_button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:elevation="7dp"
            android:fontFamily="@font/reem_kufi"
            android:gravity="center"
            android:onClick="favorites"
            android:orientation="vertical"
            android:padding="10dp"
            android:shadowColor="#7B6B64"
            android:text="@string/favorites"
            app:backgroundTint="#AA9D95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/support_button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:elevation="7dp"
            android:fontFamily="@font/reem_kufi"
            android:gravity="center"
            android:onClick="goPolicy"
            android:orientation="vertical"
            android:padding="10dp"
            android:shadowColor="#7B6B64"
            android:text="@string/privacy_policy"
            app:backgroundTint="#AA9D95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/notification_button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:elevation="7dp"
            android:fontFamily="@font/reem_kufi"
            android:gravity="center"
            android:onClick="notif"
            android:orientation="vertical"
            android:padding="10dp"
            android:shadowColor="#7B6B64"
            android:text="@string/notification"
            app:backgroundTint="#AA9D95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/reservation_button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:elevation="7dp"
            android:fontFamily="@font/reem_kufi"
            android:gravity="center"
            android:onClick="goReservation"
            android:orientation="vertical"
            android:padding="10dp"
            android:shadowColor="#7B6B64"
            android:text="@string/reservation"
            app:backgroundTint="#AA9D95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:elevation="7dp"
            android:fontFamily="@font/reem_kufi"
            android:gravity="center"
            android:onClick="logout"
            android:orientation="vertical"
            android:padding="10dp"
            android:shadowColor="#7B6B64"
            android:text="@string/log_out"
            app:backgroundTint="#AA9D95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="OnClick" />

    </LinearLayout>
</FrameLayout>