<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F0EF"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="189dp"
        android:layout_height="153dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/minilogom"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtView_Welcome_signup"
        android:layout_width="200sp"
        android:layout_height="84dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="center_horizontal"
        android:text="@string/hello_there_welcome_back"
        android:textColor="@color/numberButton"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/Login_editTxtPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/edit_txt"
        android:paddingStart="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        android:textColorHint="#BEA7A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_editTxtEmail"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/Login_editTxtEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/edit_txt"
        android:paddingStart="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:textColorHint="#BEA7A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Welcome_signup"
        tools:ignore="Autofill,RtlSymmetry" />

    <Button
        android:id="@+id/Login_btn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/reem_kufi"
        android:onClick="login"
        android:text="@string/log_n"
        app:backgroundTint="#CD5C5C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forger_password_txtView" />

    <TextView
        android:id="@+id/forger_password_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/reem_kufi"
        android:onClick="navigateUser2"
        android:text="@string/forget_my_password"
        android:textColor="#73C6B6"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_editTxtPassword" />

    <TextView
        android:id="@+id/Login_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/reem_kufi"
        android:onClick="navigateUser"
        android:text="@string/sign_in"
        android:textColor="#73C6B6"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>