<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F9F9"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/goBack1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:elevation="3dp"
        android:padding="3dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/user_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />



    <EditText
        android:id="@+id/profile_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:elevation="10dp"
        android:background="@drawable/memories_bg"
        android:fontFamily="@font/reem_kufi"
        android:gravity="center"
        android:text="@string/your_email"
        android:textColor="@color/red"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        tools:ignore="Autofill,LabelFor,TextFields">

    </EditText>


    <EditText
        android:id="@+id/profile_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:elevation="10dp"
        android:background="@drawable/memories_bg"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/red"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email"
        tools:ignore="Autofill,LabelFor,TextFields">

    </EditText>


    <EditText
        android:id="@+id/profile_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:elevation="10dp"
        android:background="@drawable/memories_bg"
        android:fontFamily="@font/reem_kufi"
        android:gravity="center"
        android:text="@string/phone"
        android:textColor="@color/red"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username"
        tools:ignore="Autofill,LabelFor,TextFields">

    </EditText>

    <EditText
        android:id="@+id/profile_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:elevation="10dp"
        android:background="@drawable/memories_bg"
        android:fontFamily="@font/reem_kufi"
        android:gravity="center"
        android:text="@string/address"
        android:textColor="@color/red"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone"
        tools:ignore="Autofill,LabelFor,TextFields">

    </EditText>


    <Button
        android:id="@+id/updatee"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/reem_kufi"
        android:text="@string/update"
        app:backgroundTint="#73C6B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_address" />

</androidx.constraintlayout.widget.ConstraintLayout>